JSA avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
@@ -20,7 +20,7 @@
     }
 
     <script src="~/Resources/js/CajaGeneral.js"></script>
-    <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
+  
     <script type="text/javascript">
         function OnSelectedChangeFilterConcepto(s, e) {
             debugger
@@ -177,7 +177,7 @@
                                }).GetHtml()
                                 </div>
                                 <div class="col-sm-3">
-                                    <strong>Entidad:</strong>                                 
+                                    <strong>Punto de venta:</strong>                                 
                                     @Html.DevExpress().ComboBox(settings =>
                                {
                                    settings.Name = "cbxentidad";
