--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
@@ -62,7 +62,7 @@
                                         <div class="col-sm-12">
                                             <div class="row clearfix">
                                                 <div class="col-sm-3">
-                                                    <b>Teléfono del cliente:</b>
+                                                    <b>Teléfono o N° del cliente:</b>
                                                     @Html.TextBoxFor(m => m.Telefono1, new { @class = "form-control", @id = "txtTel1", placeholder = "Teléfono del cliente" })
                                                 </div>
                                                 <div class="col-sm-3">
@@ -121,11 +121,18 @@
                                                             settings.Properties.CallbackPageSize = 30;
                                                             settings.Properties.TextFormatString = "{0} {1}";
                                                             settings.Properties.ValueField = "IdCliente";
-                                                            settings.Properties.ValueType = typeof(int);                                                           
-                                                            settings.Properties.Columns.Add("Nombre", "Nombre", 130);
+                                                            settings.Properties.ValueType = typeof(int);
+                                                            settings.Properties.Columns.Add(column =>
+                                                            {
+                                                                column.Caption = "Nombre";
+                                                                column.FieldName = "Nombre";
+                                                                settings.Properties.ItemStyle.Wrap = DefaultBoolean.True;
+                                                                column.Width = 130;
+
+                                                            });
                                                             settings.Properties.Columns.Add("Apellido1", "Apellido", 130);
                                                             settings.Properties.Columns.Add("Rfc", "RFC", 230);
-                                                            settings.Properties.Columns.Add("Telefono", "Telefono", 100);                                                       
+                                                            settings.Properties.Columns.Add("Telefono", "Telefono", 100);
                                                         }).BindList(ViewBag.ListaCliente).Bind(Model.IdCliente).GetHtml();
                                                     }
                                                     else
@@ -141,7 +148,14 @@
                                                             settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                             settings.Properties.TextFormatString = "{0} {1}";
                                                             settings.Properties.ValueType = typeof(int);
-                                                            settings.Properties.Columns.Add("Nombre", "Nombre", 130);
+                                                            settings.Properties.Columns.Add(column =>
+                                                            {
+                                                                column.Caption = "Nombre";
+                                                                column.FieldName = "Nombre";
+                                                                settings.Properties.ItemStyle.Wrap = DefaultBoolean.True;
+                                                                column.Width = 130;
+
+                                                            });
                                                             settings.Properties.Columns.Add("Apellido1", "Apellido", 130);
                                                             settings.Properties.Columns.Add("Rfc", "RFC", 230);
                                                             settings.Properties.Columns.Add("Telefono", "Telefono", 100);
@@ -199,7 +213,12 @@
                                                             settings.Properties.Columns.Add("Calle", "Calle", 150);
                                                             settings.Properties.Columns.Add("NumExt", "NumExt", 100);
                                                             settings.Properties.Columns.Add("Colonia", "Colonia", 150);
-                                                            settings.Properties.Columns.Add("formatted_address", "Referencia", 250);
+                                                            settings.Properties.Columns.Add(column =>
+                                                            {
+                                                                column.Caption = "Referencia";
+                                                                column.FieldName = "formatted_address";
+                                                                settings.Properties.ItemStyle.Wrap = DefaultBoolean.True;
+                                                            });
                                                         }).BindList(ViewBag.ListaDomicilios).GetHtml();
                                                     }
                                                     else
@@ -217,8 +236,13 @@
                                                             settings.Properties.ValueType = typeof(int);
                                                             settings.Properties.Columns.Add("Calle", "Calle", 300);
                                                             settings.Properties.Columns.Add("NumExt", "NumExt", 100);
-                                                            settings.Properties.Columns.Add("Colonia", "Colonia", 150);
-                                                            settings.Properties.Columns.Add("formatted_address", "Referencia", 300);
+                                                            settings.Properties.Columns.Add("Colonia", "Colonia", 150);                                                         
+                                                            settings.Properties.Columns.Add(column =>
+                                                            {
+                                                                column.Caption = "Referencia";
+                                                                column.FieldName = "formatted_address";
+                                                                settings.Properties.ItemStyle.Wrap = DefaultBoolean.True;
+                                                            });
                                                         }).GetHtml();
                                                     }
                                                 </div>
@@ -328,7 +352,7 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-12">
                                             <div class="form-group">
-                                                <input type="button" value="Cancelar" formaction=@Url.Action("Index") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
+                                                <input type="button" value="Cancelar" onclick="location.href='@Url.Action("Index", "Pedidos")'" class="btn btn-raised btn-primary btn-round float-left" />
                                             </div>
                                             <div class="form-group">
                                                 @*id="altaPedido"*@
