--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_lectura_p5000.xml
@@ -98,10 +98,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                tools:targetApi="P"
-                android:textColor="@color/colorTextLogin"
                 android:inputType="number"
-                android:visibility="gone" />
+                android:textColor="@color/colorTextLogin"
+                android:visibility="gone"
+                tools:targetApi="P" />
 
             <Space
                 android:layout_width="match_parent"
