--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedor.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedor.cshtml
@@ -264,10 +264,11 @@
                                     @Html.ValidationMessageFor(m => m.IdBanco, "", new { @class = "alert-danger" })
                                 </div>
                                 <div class="col-md-6">
-                                    <b>Cuenta</b>
+                                    <b>Cuenta *</b>
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.Cuenta, new { @class = "form-control", @placeholder = "Número de cuenta" })
                                     </div>
+                                    @Html.ValidationMessageFor(m => m.Cuenta, "", new { @class = "alert-danger" })
                                 </div>
                             </div>
                             <div class="row clearfix">
