JSA - Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraComplemento.cshtml
@@ -180,6 +180,11 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="col-sm-8 offset-md-3 offset-sm-2">
+                                        <a href="@Url.Action("Ordenes", "OrdenCompra" )" ID="btnRegresar" class="btn btn-raised btn-primary btn-round" Text="Regresar">
+                                            Regresar
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-8 offset-md-3 offset-sm-2">
                                         @*<button btn id="BtnFactura" formaction="ActualizarDatosFactura" class="btn btn-primary btn-round">
                                                 Guardar
                                             </button>*@
