--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -127,7 +127,7 @@
                             }
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="col-lg-4 col-md-8 text-center">
-                                    <a href="@Url.Action("OrdenCopra", "Ordenes" )" ID="btnRegresar" class="btn btn-raised btn-primary btn-round" Text="Regresar">
+                                    <a href="@Url.Action("Ordenes", "OrdenCompra" )" ID="btnRegresar" class="btn btn-raised btn-primary btn-round" Text="Regresar">
                                         Regresar
                                     </a>
                                 </div>
