--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisicion.cshtml
@@ -207,19 +207,20 @@
                                                 <strong>
                                                     <label>Cantidad: <b id="unidadPord"></b> </label>
                                                 </strong>
-                                                @Html.TextBoxFor(m => m.Cantidad, Model.Cantidad.ToString(), new { @class = "form-control", @type = "number" })
+                                                @Html.TextBoxFor(m => m.Cantidad, Model.Cantidad.ToString(), new { @class = "form-control", @type = "number",
+                                               @min = "0" })
                                                 @Html.ValidationMessageFor(m => m.Cantidad, "", new { @class = "alert-danger" })
                                             </div>
                                             <div class="col-lg-3">
                                                 <b>Centro de costo:</b>
                                                 <select class="form-control z-index show-tick" data-live-search="true" id="IdCentroCosto" name="IdCentroCosto">
                                                     @if (ViewBag.ProductoEdit != null)
-                                                    {
-                                                        foreach (var lst in ViewBag.ProductoEdit)
                                                         {
+                                                            foreach (var lst in ViewBag.ProductoEdit)
+                                                            {
                                                             <option value="@lst.IdCentroCosto" selected>@lst.CentroCosto</option>
+                                                            }
                                                         }
-                                                    }
                                                     else
                                                     {
                                                         <option value="0">Seleccione uno</option>
@@ -230,7 +231,7 @@
                                                                 if (lst.IdCentroCosto == Model.IdCentroCosto)
                                                                 {
                                                                     <option value="@lst.IdCentroCosto" selected>@lst.Descripcion</option>
-                                                                }
+                                                    }
                                                                 else
                                                                 {
                                                                     <option value="@lst.IdCentroCosto">@lst.Descripcion</option>
@@ -251,9 +252,9 @@
                                                 <b>Aplicación:</b>
                                                 <div class="form-group">
                                                     @if (ViewBag.ProductoEdit != null)
+                                                {
+                                                    foreach (var lst in ViewBag.ProductoEdit)
                                                     {
-                                                        foreach (var lst in ViewBag.ProductoEdit)
-                                                        {
                                                             @*@Html.LabelFor(model => model.Aplicacion, lst.Aplicacion, new { @class = "form-control" })*@
                                                             <input type="text" value="@lst.Aplicacion" name="Aplicacion" readonly="readonly" class="form-control" />
                                                         }
@@ -302,11 +303,11 @@
                                                                 <td>@prodReq.Aplicacion</td>
                                                                 <td>@prodReq.CentroCosto</td>
                                                                 <td>
-                                                                    <a href="@Url.Action("Editar", "Requisicion" , new { id=prodReq.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    @*<a href="@Url.Action("Editar", "Requisicion" , new { id=prodReq.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">edit</i>
                                                                         <span>Editar</span>
-                                                                    </a>
-                                                                    <a href="@Url.Action("Borrar", "Requisicion" , new { id=prodReq.IdProducto })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                                    </a>*@
+                                                                    <a href="@Url.Action("Borrar", "Requisicion" , new { id=prodReq.IdProducto,idUsuarioSol=Model.UsuarioSolicitante })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
                                                                         <i class="material-icons">delete</i>
                                                                         <span>Eliminar</span>
                                                                     </a>
