--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductComplementoPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/_ProductComplementoPartial.cshtml
@@ -5,7 +5,7 @@
         settings.Name = "ProductComplemento";
         settings.CallbackRouteValues = new { Controller = "OrdenCompra", Action = "ProductComplementoPartial" };
         settings.SettingsEditing.BatchUpdateRouteValues = new { Controller = "OrdenCompra", Action = "ProductosComplementoPartialUpdate" };
-
+        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.KeyFieldName = "IdProducto";
 
         settings.SettingsPager.Visible = true;
@@ -68,7 +68,7 @@
             c.Width = System.Web.UI.WebControls.Unit.Percentage(20);
             c.Settings.AllowSort = DefaultBoolean.False;
             c.EditFormSettings.Visible = DefaultBoolean.False;
-        });     
+        });
         settings.Columns.Add(c =>
         {
             c.FieldName = "IdCentroCosto";
@@ -155,7 +155,7 @@
             {
                 p.DisplayFormatString = "c";
             });
-        });      
+        });
         settings.CellEditorInitialize = (s, e) =>
         {
             ASPxEdit editor = (ASPxEdit)e.Editor;
